# tinyVLLM

./: .gitignore  README.md  pyproject.toml
requirements/: dev.txt
scripts/: bench_decode.py  bench_runtime.py  hf_gpt2_attn_compare.py  hf_gpt2_full_logits_compare.py  hf_rope_gqa_attn_compare.py  run_engine_hf_gpt2.py  run_engine_toy.py  smoke_cpu.py  smoke_gpu.py  verify_ref_vs_contig_gpu.py
src/vllm_scratch/attention/: reference.py  triton_decode.py  triton_prefill_v0.py
src/vllm_scratch/hf/: gpt2_paged.py  rope_gqa.py
src/vllm_scratch/kv_cache/: allocator.py  block_table.py  paged_kv.py
src/vllm_scratch/runtime/: engine.py  request.py  sampling.py  speculative.py  toy_engine.py
tests/: test_allocator.py  test_block_table.py  test_engine_scheduler.py  test_paged_kv_write.py  test_reference_attention.py  test_rope_gqa.py  test_toy_engine_decode_matches_ref.py  test_triton_matches_ref.py  test_triton_prefill_matches_ref.py
